--- a/.github/workflows/web_app_deployment.yml
+++ b/.github/workflows/web_app_deployment.yml
@@ -26,6 +26,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
+      - name: Elevate permissions
+        run: sudo su
+        
       - name: Run a one-line script
         run: cp index.html /var/www/html
 
