--- a/.github/workflows/web_app_deployment.yml
+++ b/.github/workflows/web_app_deployment.yml
@@ -27,13 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Elevate permissions
-        run: sudo su
-        
-      - name: Run a one-line script
+        run: | 
+          sudo su
+          whoami
+
+      - name: Copy index file to apache directory
         run: cp index.html /var/www/html
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+     
