--- a/.github/workflows/web_app_deployment.yml
+++ b/.github/workflows/web_app_deployment.yml
@@ -29,10 +29,8 @@ jobs:
       - name: Elevate permissions
         run: sudo su
       
-      - name: Display current user
-        run: whoami
 
       - name: Copy index file to apache directory
-        run: cp index.html /var/www/html
+        run: sudo cp index.html /var/www/html
 
      
